Fix Others on mobile

--- a/src/css/tc-survey.scss
+++ b/src/css/tc-survey.scss
@@ -185,7 +185,7 @@
 
                 .form-group {
                     display: block;
-                    flex-grow: 1;
+                    flex: 1 0 0;
                     margin-left: 40px;
                     height: 43px;
                 }
